--- a/src/SonOfCod/Views/Account/Index.cshtml
+++ b/src/SonOfCod/Views/Account/Index.cshtml
@@ -10,6 +10,10 @@
 @if (User.Identity.IsAuthenticated)
 {
     <p>Hello @User.Identity.Name!</p>
+    @using (Html.BeginForm("Logoff", "Account"))
+    {
+        <input type="submit" class="btn btn-default" value="Log out"/>
+    }
 }
 else
 {
