--- a/src/SonOfCod/Views/MarketingPage/Index.cshtml
+++ b/src/SonOfCod/Views/MarketingPage/Index.cshtml
@@ -5,4 +5,38 @@
 
 @model SonOfCod.Models.MarketingPage
 
-@Html.DisplayFor(model => model.BannerImageUrl);
+<div class="banner">
+    <style>
+    div.banner {
+        background-image: url(@Html.DisplayFor(model => model.BannerImageUrl));
+            width: 100%;
+            height: 300px;
+            position: absolute;
+            left: 0;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+    }
+    </style>
+    <h1>@Html.DisplayFor(model => model.BannerTitle)</h1>
+</div>
+
+<div class="summary">
+    <h1>@Html.DisplayFor(model => model.SummaryTitle)</h1>
+    <p>@Html.DisplayFor(model => model.SummaryText)</p>
+</div>
+
+<div>
+    <h4>@Html.DisplayFor(model => model.ProductsTitle)</h4>
+    
+    @*@foreach(var product in Model.Products))
+    {
+        <img src="@product.ImageUrl" />
+        <h4>@product.Description</h4>
+    }*@
+</div>
+<div class="media">
+    <h2>@Html.DisplayFor(model => model.NewsTitle)</h2>
+    <img src="@Html.DisplayFor(model => model.NewsImageUrl)" />
+    <p>@Html.DisplayFor(model => model.NewsSummary)</p>
+</div>
