--- a/src/SonOfCod/Views/MarketingPage/Index.cshtml
+++ b/src/SonOfCod/Views/MarketingPage/Index.cshtml
@@ -20,7 +20,7 @@
     </style>
     <h1>@Html.DisplayFor(model => model.BannerTitle)</h1>
 </div>
-
+<div class="space"></div>
 <div class="summary">
     <h1>@Html.DisplayFor(model => model.SummaryTitle)</h1>
     <p>@Html.DisplayFor(model => model.SummaryText)</p>
